From version 0.5.0 to 0.5.1
- call source referencing by request uri rather than resolved interface.
- sms instant messaging multi-nodal and remote uri support.
- cfwd busy can be used if no dnd or away forward target set.
- sip publish messages now update internal presense status.

From version 0.4.7 to 0.5.0
- static routing tables with re-write rules and inter-node call support.
- get interface in arriving call before checking port id.
- new temporary records no longer double inced at invite.
- rewrite of timing control in background thread for accuracy and bugfixes.

From version 0.4.5 to 0.4.6
- 4 second call setup window.

From version 0.4.4 to 0.4.5
- change in call handling for ringing.
- remote call connection stats counted as incoming for near leg.
- inviteRemote can pre-stuff authentication header on redirection.
- invite handling to assure interface address gets set if non-domain call.
- invite mesh network redirection support possible.

From version 0.4.3 to 0.4.4
- logging of state change, period and reload requests.
- logging of registry activation and releases.
- corrected use of xml comments nesting xml statements.
- clarification of stack <domain>xxx</domain> setting vs localnames.
- auto domain insertion if no uri request host (should fix gizmo agent).
- streamlined address handling on inbound calls.
- state change part of scripting plugin.

From version 0.4.2 to 0.4.3
- fix in init script.
- fix in sample lab.xml file.
- added hourly cron script for sipwitch stats.
- more fixups for "live" config reload.

From version 0.4.1 to 0.4.2
- locking violations in sip message logging and scripting startup fixed.

From version 0.4.0 to 0.4.1
- added cancel to terminate any active invites before forwarding.
- inc usage of temporary registry for stats.

From version 0.3.13 to 0.4.0
- conditional provisioning possible based on server "state".
- realm handling including sipdigest utility, xmlrpc, and swig.
- correct setting of dialog id for multipath calls.